--- a/Ejercicio API/.gitignore
+++ b/Ejercicio API/.gitignore
@@ -23,8 +23,12 @@
 hs_err_pid*
 replay_pid*
 
-# Maven
-target/
+# Maven (exclude most of target/ but allow reports)
+target/classes/
+target/generated-sources/
+target/generated-test-sources/
+target/maven-archiver/
+target/maven-status/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -35,12 +39,13 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
-# Karate reports and logs
-target/karate-reports/
-target/surefire-reports/
-target/test-classes/
+# Allow Karate reports to be committed
+!target/karate-reports/
+!target/surefire-reports/
+!target/test-classes/
+
+# Exclude only Karate logs
 karate.log
-*.karate-json.txt
 
 # IDE files
 .idea/
